友情链接可维护

--- a/application/admin/view/nature/edit_nature.html
+++ b/application/admin/view/nature/edit_nature.html
@@ -41,6 +41,13 @@
                                 </div>
                                 <div class="hr-line-dashed"></div>
                                 <div class="form-group">
+                                    <label class="col-sm-2 control-label">字体图标：</label>
+                                    <div class="input-group col-sm-4">
+                                        <input id="font_family" type="text" class="form-control" name="font_family"  value="{$article.font_family}">
+                                    </div>
+                                </div>
+                                <div class="hr-line-dashed"></div>
+                                <div class="form-group">
                                     <label class="col-sm-2 control-label">序号：</label>
                                     <div class="input-group col-sm-4">
                                         <input id="sortnum" type="text" class="form-control" name="sortnum"  value="{$article.sortnum}" placeholder="请输入序号" >
