--- a/application/admin/view/nature/add_nature.html
+++ b/application/admin/view/nature/add_nature.html
@@ -37,6 +37,13 @@
                                 </div>
                                 <div class="hr-line-dashed"></div>
                                 <div class="form-group">
+                                    <label class="col-sm-2 control-label">字体图标：</label>
+                                    <div class="input-group col-sm-4">
+                                        <input id="font_family" type="text" class="form-control" name="font_family"  placeholder="请输入字体图标" >
+                                    </div>
+                                </div>
+                                <div class="hr-line-dashed"></div>
+                                <div class="form-group">
                                     <label class="col-sm-2 control-label">序号：</label>
                                     <div class="input-group col-sm-4">
                                         <input id="sortnum" type="text" class="form-control" name="sortnum"  value="{$sortnum}" placeholder="请输入序号" >
