--- a/application/admin/view/article/edit_article.html
+++ b/application/admin/view/article/edit_article.html
@@ -113,12 +113,21 @@
                                 <!--</div>-->
                                 <!--<div class="hr-line-dashed"></div>-->
                                 <input name="cate_id" value="{$article.cate_id}" type="hidden" id="cate_id">
+                                {if ($article.cate_id eq 95||$article.cate_id eq 103||$article.cate_id eq 97||$article.cate_id eq 100)}
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">产品名称：</label>
+                                    <div class="input-group col-sm-4">
+                                        <input id="title" type="text" class="form-control" name="title" value="{$article.title}">
+                                    </div>
+                                </div>
+                                {else /}
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">标题：</label>
                                     <div class="input-group col-sm-4">
                                         <input id="title" type="text" class="form-control" name="title" value="{$article.title}">
                                     </div>
                                 </div>
+                                {/if}
                                 <div class="hr-line-dashed"></div>
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">序号：</label>
